fixed issue with search pop up on small screens

--- a/src/components/SearchPopSmall/searchPopSmall.css
+++ b/src/components/SearchPopSmall/searchPopSmall.css
@@ -10,10 +10,9 @@
 }
 }
 .searchsmall-wrapper{
-    width: 95%;
-    margin: auto;
-    padding: 1em 0;
-
+    width: 90%;
+    margin:5vh auto;
+   
 }
 .searchsmall-header-tab{
     width: 90%;
